--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   </head>
   <body>
     <h1>Welcome to My Weather App</h1>
-    <footer>Built by Lila Oliver</footer>
+    <footer>
+      Built by
+      <a href="https://github.com/dashboard" target="_blank">Lila Oliver</a> ,
+      hosted on
+      <a
+        href="https://github.com/loliver42/My-Weather-App-Project"
+        target="_blank"
+      >
+        GitHub</a
+      >
+      and website hosted on
+      <a
+        href="https://app.netlify.com/sites/my-weather-app24/configuration/general"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
