--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <footer>
       Built by
       <a href="https://github.com/dashboard" target="_blank">Lila Oliver</a> ,
-      hosted on
+      open-sourced on
       <a
         href="https://github.com/loliver42/My-Weather-App-Project"
         target="_blank"
       >
         GitHub</a
       >
-      and website hosted on
+      and hosted on
       <a
         href="https://app.netlify.com/sites/my-weather-app24/configuration/general"
         target="_blank"
