--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Weather App Project</title>
   </head>
   <body>
-    <h1>Welcome to My Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>New Jersey</h1>
+      <div>
+        <p>
+          Monday 9:15, Sunny <br />
+          Humidity: 66%, Wind: 3.13mph
+        </p>
+      </div>
+      <div>☀️ 35°F</div>
+      <ul>
+        <li>Tue</li>
+        <li>Wed</li>
+        <li>Thur</li>
+        <li>Fri</li>
+        <li>Sat</li>
+        <li>Sun</li>
+      </ul>
+    </main>
     <footer>
       Built by
       <a href="https://github.com/dashboard" target="_blank">Lila Oliver</a> ,
