--- a/index.html
+++ b/index.html
@@ -3,49 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather App Project</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <h1>New Jersey</h1>
-      <div>
-        <p>
-          Monday 9:15, Sunny <br />
-          Humidity: 66%, Wind: 3.13mph
-        </p>
-      </div>
-      <div>☀️ 35°F</div>
-      <ul>
-        <li>Tue</li>
-        <li>Wed</li>
-        <li>Thur</li>
-        <li>Fri</li>
-        <li>Sat</li>
-        <li>Sun</li>
-      </ul>
-    </main>
-    <footer>
-      Built by
-      <a href="https://github.com/dashboard" target="_blank">Lila Oliver</a> ,
-      open-sourced on
-      <a
-        href="https://github.com/loliver42/My-Weather-App-Project"
-        target="_blank"
-      >
-        GitHub</a
-      >
-      and hosted on
-      <a
-        href="https://app.netlify.com/sites/my-weather-app24/configuration/general"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <h1>New Jersey</h1>
+        <div>
+          <p>
+            Monday 9:15, Sunny <br />
+            Humidity: 66%, Wind: 3.13mph
+          </p>
+        </div>
+        <div>☀️ 35°F</div>
+        <ul>
+          <li>Tue</li>
+          <li>Wed</li>
+          <li>Thur</li>
+          <li>Fri</li>
+          <li>Sat</li>
+          <li>Sun</li>
+        </ul>
+      </main>
+      <footer>
+        Built by
+        <a href="https://github.com/dashboard" target="_blank">Lila Oliver</a> ,
+        open-sourced on
+        <a
+          href="https://github.com/loliver42/My-Weather-App-Project"
+          target="_blank"
+        >
+          GitHub</a
+        >
+        and hosted on
+        <a
+          href="https://app.netlify.com/sites/my-weather-app24/configuration/general"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
