--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
     <div class="container">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -28,7 +29,7 @@
       <main>
         <div class="weather-data">
           <div>
-            <h1 class="weather-city">New Jersey</h1>
+            <h1 class="weather-city" id="city">New Jersey</h1>
 
             <p class="weather-details">
               Monday 9:15, Sunny <br />
@@ -60,5 +61,6 @@
         >
       </footer>
     </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
