--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-temperature">
             <div class="weather-icon">☀️</div>
-            <div class="weather-app-temperature">35</div>
+            <div class="weather-app-temperature" id="temperature">35</div>
             <div class="weather-unit">°F</div>
           </div>
         </div>
