Added js description functions

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             <h1 class="weather-city" id="city">New Jersey</h1>
 
             <p class="weather-details">
-              Monday 9:15, Sunny <br />
-              Humidity: <strong> 66%</strong>, Wind: <strong> 3.13mph</strong>
+              Monday 9:15, <span id="description">Sunny</span> <br />
+              Humidity: <strong id="humidity"> 66%</strong>, Wind:
+              <strong id="wind-speed"> 3.13mph</strong>
             </p>
           </div>
           <div class="weather-temperature">
