--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <h1 class="weather-city" id="city">New Jersey</h1>
 
             <p class="weather-details">
-              Monday 9:15, <span id="description">Sunny</span> <br />
-              Humidity: <strong id="humidity"> 66%</strong>, Wind:
-              <strong id="wind-speed"> 3.13mph</strong>
+              <span id="time"></span>, <span id="description"></span> <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-temperature">
