--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           </div>
           <div class="weather-temperature">
             <div class="weather-icon" id="icon"></div>
-            <div class="weather-app-temperature" id="temperature">35</div>
-            <div class="weather-unit">°F</div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-unit"></div>
           </div>
         </div>
       </main>
