Added weather forcast html and css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,60 @@
           <div class="weather-temperature">
             <div class="weather-icon" id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weather-unit"></div>
+            <div class="weather-unit">°F</div>
+          </div>
+        </div>
+        <div class="weather-forcast">
+          <div class="weather-forcast-day">
+            <div class="weather-forcast-date">Wed</div>
+            <div class="weather-forcast-icon">⛅</div>
+            <div class="weather-forcast-temperatures">
+              <div class="weather-forcast-temperature">
+                <strong> 45°</strong>
+              </div>
+              <div class="weather-forcast-temperature">20°</div>
+            </div>
+          </div>
+          <div class="weather-forcast-day">
+            <div class="weather-forcast-date">Thurs</div>
+            <div class="weather-forcast-icon">⛅</div>
+            <div class="weather-forcast-temperatures">
+              <div class="weather-forcast-temperature">
+                <strong> 45°</strong>
+              </div>
+              <div class="weather-forcast-temperature">20°</div>
+            </div>
+          </div>
+
+          <div class="weather-forcast-day">
+            <div class="weather-forcast-date">Fri</div>
+            <div class="weather-forcast-icon">⛅</div>
+            <div class="weather-forcast-temperatures">
+              <div class="weather-forcast-temperature">
+                <strong> 45°</strong>
+              </div>
+              <div class="weather-forcast-temperature">20°</div>
+            </div>
+          </div>
+          <div class="weather-forcast-day">
+            <div class="weather-forcast-date">Sat</div>
+            <div class="weather-forcast-icon">⛅</div>
+            <div class="weather-forcast-temperatures">
+              <div class="weather-forcast-temperature">
+                <strong> 45°</strong>
+              </div>
+              <div class="weather-forcast-temperature">20°</div>
+            </div>
+          </div>
+          <div class="weather-forcast-day">
+            <div class="weather-forcast-date">Sun</div>
+            <div class="weather-forcast-icon">⛅</div>
+            <div class="weather-forcast-temperatures">
+              <div class="weather-forcast-temperature">
+                <strong> 45°</strong>
+              </div>
+              <div class="weather-forcast-temperature">20°</div>
+            </div>
           </div>
         </div>
       </main>
